--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-native-firebase/messaging": "0.3.0",
     "@shoutem/ui": "1.0.1",
     "customize-cra": "0.5.0",
+    "events": "^3.1.0",
     "lodash": "4.17.15",
     "mobx": "5.13.0",
     "mobx-react": "6.1.3",
@@ -49,6 +50,8 @@
     "react-navigation": "3.11.1",
     "react-navigation-material-bottom-tabs": "1.0.0",
     "rn-placeholder": "3.0.0",
+    "stream": "0.0.2",
+    "timers": "^0.1.1",
     "xml2js": "^0.4.23"
   },
   "devDependencies": {
