--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mobx": "5.13.0",
     "mobx-react": "6.1.3",
     "moment": "2.24.0",
+    "moment-timezone": "^0.5.31",
     "prop-types": "15.7.2",
     "react": "16.10.2",
     "react-app-rewired": "2.1.3",
