--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
     "react-native-animatable": "1.3.2",
     "react-native-device-info": "2.3.2",
     "react-native-gesture-handler": "1.3.0",
-    "react-native-get-location": "1.2.0",
     "react-native-html-to-pdf": "0.8.0",
     "react-native-i18n": "2.0.15",
     "react-native-image-crop-picker": "0.25.0",
@@ -47,6 +46,7 @@
     "react-native-print": "0.6.0",
     "react-native-push-android": "1.0.0",
     "react-native-star-rating": "1.1.0",
+    "react-native-tabs-section-list": "^1.0.1",
     "react-native-vector-icons": "6.6.0",
     "react-navigation": "3.11.1",
     "react-navigation-material-bottom-tabs": "1.0.0",
