--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -196,10 +196,15 @@ android {
 }
 
 dependencies {
+    implementation project(':@react-native-community_geolocation')
+    implementation project(':react-native-print')
+    implementation project(':react-native-code-push')
+    implementation project(':react-native-permissions')
+    implementation project(':@react-native-community_audio-toolkit')
+    implementation project(':react-native-notifications')
     implementation project(':react-native-navigation-bar-color')
     implementation project(':react-native-i18n')
     implementation project(':react-native-gesture-handler')
-    implementation project(':react-native-device-info')
     implementation project(':react-native-vector-icons')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"  // From node_modules
@@ -221,3 +226,5 @@ task copyDownloadableDepsToLibs(type: Copy) {
 
 apply from: file("../../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesAppBuildGradle(project)
 apply plugin: 'com.google.gms.google-services'
+com.google.gms.googleservices.GoogleServicesPlugin.config.disableVersionCheck = true
+
