--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
     <uses-permission android:name="android.permission.CALL_PHONE"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE"/>
-	
+
+    <uses-sdk tools:overrideLibrary="com.reactnativecommunity.rctaudiotoolkit, com.wix.reactnativenotifications"/>
+
     <application
       android:name=".MainApplication"
       android:label="@string/app_name"
@@ -20,8 +22,7 @@
       android:roundIcon="@mipmap/ic_launcher"
       android:allowBackup="false"
         android:usesCleartextTraffic="true"
-        tools:overrideLibrary="com.reactnativecommunity.rctaudiotoolkit"
-      android:theme="@style/AppTheme">
+    android:theme="@style/AppTheme">
         <uses-library android:name="org.apache.http.legacy" android:required="false"/>
         <receiver android:name="br.com.helderfarias.pushandroid.LocalMessagingReceiver" />
                <receiver android:enabled="true" android:exported="true"
