--- a/package.json
+++ b/package.json
@@ -11,26 +11,27 @@
   "dependencies": {
     "@babel/plugin-proposal-decorators": "7.4.4",
     "@react-native-community/audio-toolkit": "^2.0.3",
-    "@react-native-community/geolocation": "1.4.2",
+    "@react-native-community/geolocation": "^2.0.2",
+    "@react-native-community/push-notification-ios": "^1.3.0",
     "@react-native-community/slider": "2.0.0",
     "@react-native-firebase/app": "0.3.0",
     "@react-native-firebase/auth": "0.3.0",
     "@react-native-firebase/messaging": "0.3.0",
     "@shoutem/ui": "1.0.1",
     "customize-cra": "0.5.0",
-    "events": "^3.1.0",
+    "events": "3.1.0",
     "lodash": "4.17.15",
     "mobx": "5.13.0",
     "mobx-react": "6.1.3",
     "moment": "2.24.0",
-    "moment-timezone": "^0.5.31",
+    "moment-timezone": "0.5.31",
     "prop-types": "15.7.2",
     "react": "16.10.2",
     "react-app-rewired": "2.1.3",
     "react-native": "0.61.0",
     "react-native-android-location-enabler": "1.2.0",
     "react-native-animatable": "1.3.2",
-    "react-native-device-info": "2.3.2",
+    "react-native-code-push": "^6.2.0",
     "react-native-gesture-handler": "1.3.0",
     "react-native-html-to-pdf": "0.8.0",
     "react-native-i18n": "2.0.15",
@@ -42,7 +43,9 @@
     "react-native-material-tabs": "4.1.1",
     "react-native-modal-datetime-picker": "7.5.0",
     "react-native-navigation-bar-color": "0.1.0",
+    "react-native-notifications": "^3.2.2",
     "react-native-paper": "2.16.0",
+    "react-native-permissions": "^2.1.5",
     "react-native-print": "0.6.0",
     "react-native-push-android": "1.0.0",
     "react-native-star-rating": "1.1.0",
@@ -52,8 +55,8 @@
     "react-navigation-material-bottom-tabs": "1.0.0",
     "rn-placeholder": "3.0.0",
     "stream": "0.0.2",
-    "timers": "^0.1.1",
-    "xml2js": "^0.4.23"
+    "timers": "0.1.1",
+    "xml2js": "0.4.23"
   },
   "devDependencies": {
     "@babel/core": "7.5.5",
